# perovskites_modeling_with_rag

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
searcher/: main.py  pyproject.toml
searcher/conf/: example.ini
searcher/docs/: example.md
searcher/docs/EXP_001_is_retrieval_needed_eval/: config.ini  config_embeding_only_search.ini  dataset.jsonl  no_docs_prompt.md  no_retrieval_config.ini
searcher/docs/example/: eval_test.json
searcher/docs/example_eval/: config.ini
searcher/experimental_reports/2026_04_10-20_27_40/: detailed_resulsts.jsonl.zst  report.json.zst  report.md
searcher/experimental_reports/2026_04_10-20_50_44/: README.md  detailed_resulsts.jsonl.zst  report.json.zst
searcher/experimental_reports/2026_04_10-21_05_24/: README.md  detailed_resulsts.jsonl.zst  report.json.zst
searcher/experimental_reports/2026_04_10-21_11_27/: README.md  detailed_resulsts.jsonl.zst  report.json.zst
searcher/experimental_reports/2026_04_10-21_15_52/: README.md  detailed_resulsts.jsonl.zst  report.json.zst
searcher/experimental_reports/2026_04_16-21_08_14/: README.md  detailed_resulsts.jsonl.zst  report.json.zst
searcher/experimental_reports/2026_04_16-22_49_52/: README.md  detailed_resulsts.jsonl.zst  report.json.zst
searcher/experimental_reports/2026_04_16-23_29_21/: README.md  detailed_resulsts.jsonl.zst  report.json.zst
searcher/experimental_reports/2026_04_17-17_40_36/: README.md  detailed_resulsts.jsonl.zst  report.json.zst
searcher/scripts/: cleanup.sh
searcher/src/chat_requester/: __init__.py  creator.py  interface.py  (+1 more)
(+54 files in other folders)
