[project]
name = "perovskites-modeling-with-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "backoff>=2.2.1",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "gitpython>=3.1.46",
    "gradio>=6.4.0",
    "langchain-text-splitters>=1.1.0",
    "pydantic>=2.12.5",
    "pypdf>=6.7.5",
    "qdrant-client>=1.16.2",
    "tabulate>=0.10.0",
    "termcolor>=3.3.0",
    "zstandard>=0.25.0",
]
